# MakeAProject

./: MAKEFILE  README.md  makefile
makeCppProject/: makeCProject.sh  makeProject.sh
makeCppProject/CPPTemplate/: build.sh  configure.sh
makeProject/: makeProject  makeProject.sh
makeProject/Template/cpp/: CMakeLists.txt  run.sh
makeProject/Template/html/: index.html
